style.css
/*https://www.w3schools.com/css/css3_variables.asp*/
:root {
  --text: #ccc;
  --important: #fff;
  --nonimportant: #333;
  --bg: #111;
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  /*https://stackoverflow.com/questions/11289166/chrome-on-android-resizes-font*/
  max-height: 999999999px;
  -webkit-tap-highlight-color: transparent;
  /*https://stackoverflow.com/questions/6670151/how-can-i-force-browsers-to-print-background-images-in-css*/
  -webkit-print-color-adjust: exact;
}
::-webkit-scrollbar {
  width: 1em;
  height: 1em;
}
::-webkit-scrollbar-track {
  background: inherit;
}
::-webkit-scrollbar-thumb {
  background: var(--nonimportant);
  border-radius: 0.5em;
}
::-webkit-scrollbar-thumb:hover {
  background: var(--nonimportant);
}

body {
  background: var(--bg);
}
.pre {
  background: var(--bg);
  color: var(--text);
  font-size: 1.25rem;
  cursor: text;
  padding: 2.5em;
  padding-right: 15em;
  padding-left: 5em;
  width: 100%;
  white-space: pre-wrap;
  caret-color: var(--important);
}
.code {
  font-family: sans-serif;
  line-height: 1.5em;
  width: 100%;
}
.pre *::selection {
  background: var(--nonimportant);
}

.token.title {
  display: inline-block;
  padding-top: 0.5em;
}
.token.title .token.punctuation {
  color: var(--nonimportant);
}
.token.title.header-3,
.token.title {
  font-size: 1.33em;
}
.token.title.header-2 {
  font-size: 1.75em;
}
.token.title.header-1 {
  font-size: 2.25em;
}

.token.italic {
  font-style: italic;
}
.token.bold {
  font-weight: bolder;
  color: var(--important);
}
.token.strike {
  text-decoration: line-through;
  text-decoration-color: var(--important);
  text-decoration-thickness: 0.1em;
}
.token.italic > .token.punctuation,
.token.strike > .token.punctuation {
  display: inline-block;
  width: 0.4em;
  overflow-x: hidden;
  vertical-align: bottom;
  color: var(--nonimportant);
}
.token.bold > .token.punctuation {
  display: inline-block;
  font-size: 0.85em;
  vertical-align: top;
  color: var(--important);
}

/*https://stackoverflow.com/questions/7896402/how-can-i-replace-text-with-css*/
.token.list {
  display: inline-block;
  width: 1.5em;
  margin-left: 2.1em;
  position: relative;
  color: transparent;
}
.token.list::after {
  /*display: inline-block;
  font-size: 1.5em;
  line-height: 1em;
  transform: translateY(25%);
  color: var(--nonimportant);*/
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  /*https://www.toptal.com/designers/htmlarrows/punctuation/bullet/*/
  font-size: 2em;
  line-height: 0.75em;
  content: '•';
  color: var(--nonimportant);
}
.token.ordered.punctuation {
  display: inline-block;
  width: 1.5em;
  margin-left: 2.1em;
  font-weight: bolder;
  color: var(--nonimportant);
}
.token.checkbox {
  font-family: monospace;
}

.token.hr {
  position: relative;
  color: var(--nonimportant);
}
.token.hr::after {
  display: block;
  position: absolute;
  top: 50%;
  bottom: 0;
  height: 0.1em;
  width: calc(100vw - 5em - 10em);
  background: var(--nonimportant);
  content: '';
}

.token.code {
  font-family: monospace;
  font-size: 0.875em;
  line-height: 1em;
}
.token.code .token.punctuation {
  color: var(--nonimportant);
}
.token.code-block {
  display: inline-block;
  padding-left: 1em;
}

.token.blockquote {
  display: inline-block;
  width: 2.5em;
  padding-right: 0.5em;
  border-right: 0.15em solid var(--text);
  margin-right: 1em;
  color: var(--nonimportant);
}

.token.table {
  font-family: monospace;
}
.token.table {
  display: inline-block;
  line-height: 1em;
}
.token.table-header {
  font-weight: bolder;
  color: var(--important);
}
.token.table .token.punctuation {
  color: var(--nonimportant);
}
.token.table-line {
  text-decoration: line-through;
  text-decoration-color: var(--nonimportant);
  text-decoration-thickness: 0.1em;
}

.token.url {
  color: var(--nonimportant);
}

.token.url > .token.content {
  color: var(--important);
  text-decoration: underline;
}

.tab {
  display: inline-block;
  width: 2em;
}

@media print {
  :root {
    --text: #444;
    --important: #000;
    --nonimportant: #ccc;
    --bg: #fff;
  }
  html {
    font-size: 0.75rem;
  }
  .pre {
    padding-left: 2.5em;
    padding-right: 2.5em;
  }
  .token.hr {
    width: calc(100vw - 2.5em - 2.5em);
  }
}

